<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">피플인사이드</string>
    <string name="total_rating">전체 %.1f점</string>
    <string name="mbti_rating">%s %.1f점</string>
    <string name="all">all</string>
    <string name="movie">movie</string>
    <string name="all_korean">전체</string>
    <string name="movie_korean">영화</string>
    <string name="drama_korean">드라마</string>
    <string name="tv_english">tv</string>
    <string name="movie_english">movie</string>
    <string name="mbti_and_nickname">%s / %s</string>
    <string name="no">아니오</string>
    <string name="yes">예</string>
    <string name="cancel">취소</string>
    <string name="mbti_pipsider">MBTI / 핍사이더</string>
    <string name="could_you_review_first">해당 콘텐츠는 아직 감상이 없습니다.\n첫번째로 감상을 남겨주세요!</string>
    <string name="sub_ranking_arrow">서브 랭킹 화살표</string>
    <string name="back_button">뒤로 가기 버튼</string>
    <string name="notification_icon">알림 아이콘</string>
    <string name="mbti_icon">MBTI 아이콘</string>
    <string name="poster_image">포스터</string>
    <string name="bookmark_image">북마크</string>
    <string name="search_cancel_image">검색 취소</string>
    <string name="pick10_content_card">Pick10 콘텐츠 카드</string>
    <string name="vertical_dots">세로방향 점 세 개</string>
    <string name="heart_icon">하트 아이콘</string>
    <string name="close_button">닫기 버튼</string>
    <string name="main_logo_image">메인 로고 이미지</string>
    <string name="checkbox">체크박스</string>
    <string name="setting">설정</string>
    <string name="fix_user_info">회원정보 수정</string>
    <string name="right_arrow">오른쪽 화살표</string>
    <string name="radio_button">라디오 버튼</string>
    <string name="splash_image">앱 실행 시 이미지</string>
    <string name="comment">댓글</string>
    <string name="error_happend">오류가 발생했어요</string>
    <string name="not_found_page">주소가 잘못 입력되거나\n변경 혹은 삭제되어 페이지를 찾을 수 없어요</string>
    <string name="refresh">새로고침</string>
    <string name="network_error">네트워크 오류입니다.\n네트워크 연결을 확인하거나 잠시 후 다시 시도해주세요.</string>
    <string name="need_update_dialog_title">필수 업데이트 안내</string>
    <string name="need_update_dialog_description">더 편리하고 다양한 기능을 준비했어요. 앱을 업데이트 해주세요.</string>
    <string name="need_update_dialog_button">플레이스토어로 가기</string>
    <string name="no_user_info_dialog_description">회원 정보가 존재하지 않습니다.\n회원가입을 진행해주세요.</string>
    <string name="login_screen_subtitle">MBTI 영화/드라마 추천 서비스</string>
    <string name="will_enter_without_login">로그인 없이 먼저 둘러볼래요</string>
    <string name="kakao_native_app_key">89d8b4308014be36f84f5b0de58bca09</string>
    <string name="kakaotalk_login_failed">카카오톡 로그인에 실패하였습니다\n이메일 로그인으로 이동합니다</string>
    <string name="kakao_email_login_failed">이메일 로그인에 실패하였습니다\n다시 시도해주세요</string>
    <string name="kakao_user_info_load_failed">사용자 정보를 불러오지 못했습니다</string>
    <string name="terms_of_use">이용약관동의</string>
    <string name="please_agree_terms_of_use">만나서 반갑습니다!\n서비스 가입을 위해 다음 항목에 동의해주세요.</string>
    <string name="all_agreed">모두 동의합니다.</string>
    <string name="first_terms">[필수] 이용약관에 동의합니다.</string>
    <string name="second_terms">[필수] 개인정보 수집 및 이용에 동의합니다.</string>
    <string name="third_terms">[필수] 본인은 만 14세 이상입니다.</string>
    <string name="see_terms">보기</string>
    <string name="next">다음</string>
    <string name="sign_up">회원가입</string>
    <string name="please_input_user_info">회원님에 대해 더 자세히 알고 싶어요!\n아래 간단한 항목에 대해 알려주세요 :)</string>
    <string name="nickname">닉네임</string>
    <string name="please_input_nickname">닉네임을 입력해주세요.</string>
    <string name="duplicate_nickname">이미 사용중인 닉네임입니다.</string>
    <string name="nickname_has_bad_word">닉네임에 금지어가 포함되어 있습니다.</string>
    <string name="gender">성별</string>
    <string name="man">men</string>
    <string name="woman">women</string>
    <string name="other">other</string>
    <string name="man_korean">남자</string>
    <string name="woman_korean">여자</string>
    <string name="other_korean">선택안함</string>
    <string name="birth_year">출생년도</string>
    <string name="mbti_type">MBTI 유형</string>
    <string name="choice">선택</string>
    <string name="do_sing_up">가입하기</string>
    <string name="confirm">확인</string>
    <string name="nickname_count_with_value">%d/10</string>
    <string name="birth_year_with_value">%d년</string>
    <string name="please_choose_mbti">나의 MBTI를 선택해주세요</string>
    <string name="complete_choose">선택 완료</string>
    <string name="welcome_people_inside">피플인사이드\n방문을 환영합니다!</string>
    <string name="welcome_people_inside_subtitle">익명의 핍사이더님의 MBTI를 선택해주시면\n꼭 맞는 콘텐츠를 추천해드릴게요! </string>
    <string name="content_choice_title_1">잠깐! 피플인사이드를 제대로 즐기기 위해</string>
    <string name="content_choice_title_2">재밌게 본 콘텐츠를 선택해주세요</string>
    <string name="content_choice_title_3">5개 이상 골라주시면 회원님께 꼭 맞는\n콘텐츠를 추천해드릴게요!</string>
    <string name="content_choice_button">%d개 선택</string>
    <string name="content_choice_button_complete">%d개 선택 완료!</string>
    <string name="welcome">핍사이더가 되신 것을 환영합니다!</string>
    <string name="recommend">추천</string>
    <string name="search">검색</string>
    <string name="community">커뮤니티</string>
    <string name="my_page">마이페이지</string>
    <string name="pick10_title">취향을 고려한 PICK 10 💛</string>
    <string name="mbti_rating_battle_title">MBTI 별점 배틀 ⚔</string>
    <string name="recommend_refresh">새로 추천받기</string>
    <string name="mbti_nickname">%s %s</string>
    <string name="mbti_nickname_slash">%s / %s</string>
    <string name="sub_ranking_subtitle">%s님과 같은 MBTI가 선택한</string>
    <string name="sub_ranking_title">%s핍사이더들의 선택 ❣</string>
    <string name="choice_of_pipsider">%s 핍사이더들의 선택</string>
    <string name="go_to_write_review">감상 남기러 가기</string>
    <string name="how_about_this_content">이 콘텐츠 어떠셨나요?</string>
    <string name="bookmark">북마크</string>
    <string name="create_review">감상 남기기</string>
    <string name="fix_review">감상 수정하기</string>
    <string name="content_information">콘텐츠 정보</string>
    <string name="content_comment_title">핍사이더들의 감상</string>
    <string name="runtime_with_value">%d분</string>
    <string name="like_count_with_value">좋아요 %d</string>
    <string name="report_success">신고가 접수되었어요!</string>
    <string name="report_failed">이미 접수된 신고예요.</string>
    <string name="no_overview">줄거리 정보가 없습니다.</string>
    <string name="see_detail">자세히 보기</string>
    <string name="create_review_2">감상 작성</string>
    <string name="create_review_hint">콘텐츠와 관련해서 핍사이더들과 공유하고 싶은 감상을 자유롭게 적어주세요.</string>
    <string name="complete">완료</string>
    <string name="create_review_completed">감상 작성이 완료되었어요!</string>
    <string name="will_you_cancel">작성을 정말 취소하시겠어요?</string>
    <string name="will_you_cancel_content">‘예’를 선택 시,\n지금까지 작성하신 글은 저장되지 않아요.</string>
    <string name="search_bar_hint">영화나 드라마를 검색해보세요</string>
    <string name="contents_have_seen">내가 둘러본 콘텐츠</string>
    <string name="no_contents_have_seen">아직 둘러본 콘텐츠가 없어요.</string>
    <string name="contents_trend">인기 급상승 콘텐츠</string>
    <string name="preparing_content">해당 콘텐츠는 준비중이에요</string>
    <string name="notification">알림</string>
    <string name="there_is_no_notification">아직 알림이 없어요.</string>
    <string name="notification_will_be_deleted">알림은 30일 이후 순차적으로 지워집니다.</string>
    <string name="notification_message_emoji">💌</string>
    <string name="notification_bulb_emoji">💡</string>
    <string name="bookmarked_contents">내가 북마크한 콘텐츠</string>
    <string name="rating_contents">내가 평가한 콘텐츠</string>
    <string name="count_with_value">%d개</string>
    <string name="total_count_with_value">총 %d개</string>
    <string name="bookmark_created">북마크가 추가되었어요!</string>
    <string name="bookmark_deleted">북마크가 제거되었어요</string>
    <string name="review_fix">감상 수정</string>
    <string name="review_delete">감상 삭제</string>
    <string name="complete_fix">수정 완료</string>
    <string name="no_bookmark_contents">아직 북마크한 콘텐츠가 없어요</string>
    <string name="no_review_contents">아직 평가한 콘텐츠가 없어요</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="edit_mbti">MBTI 수정</string>
    <string name="complete_edit_profile">프로필 수정이 완료되었어요</string>
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="app_version">앱버전 v%s</string>
    <string name="update">업데이트</string>
    <string name="logout">로그아웃</string>
    <string name="delete_account">계정탈퇴</string>
    <string name="you_may_use_after_login">로그인 후 다시 이용하실 수 있어요.</string>
    <string name="delete_space_account">계정 탈퇴</string>
    <string name="delete_account_content_1" tools:ignore="TypographyEllipsis">저희가 더 잘할게요...\n정말 저희를 떠나시겠어요?</string>
    <string name="delete_account_content_2">그럼에도 불구하고 정말 피플인사이드를\n떠나고 싶으시다면 이유를 알려주시겠어요?</string>
    <string name="delete_account_content_3">%s님의 의견을 잘 반영해서\n더욱 개선된 앱으로 보답하는 피플인사이드가 될게요!</string>
    <string name="radio_text_1">활동 기록을 삭제하고 싶어요.</string>
    <string name="radio_text_2">추천 콘텐츠가 만족스럽지 않아요.</string>
    <string name="radio_text_3">다른 핍사이더들이 마음에 들지 않아요.</string>
    <string name="radio_text_4">자주 사용하지 않아요.</string>
    <string name="radio_text_5">다른 콘텐츠 추천 앱을 더 자주 사용해요.</string>
    <string name="radio_text_6">기타</string>
    <string name="agree_delete_all">모든 정보를 삭제하는 것에 동의합니다.</string>
    <string name="do_delete_account">탈퇴하기</string>
    <string name="delete_account_dialog_title">다시 오실 때까지 기다리고 있을게요</string>
    <string name="delete_account_dialog_description">탈퇴 후 언제든지 재가입이 가능해요.\n활동 기록은 다시 복구하실 수 없어요.</string>
    <string name="nonmember_jwt_token">eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxLCJzb2NpYWwiOiJzcGFjZSIsIm5pY2tuYW1lIjoiZ29kIiwibWJ0aSI6IkFCQ0QiLCJiaXJ0aCI6Ijk5OTkiLCJzZXgiOiJhbGllbiJ9.q0DbIef5nxoJGJTmbF9m0JaLgLK17CzO49iMYMXkEbo</string>
    <string name="nonmember_nickname">익명의 핍사이더</string>
    <string name="community_search_hint">MBTI 또는 키워드를 검색해보세요</string>
    <string name="write_post">글쓰기</string>
    <string name="recent_searched_keyword">최근 검색어</string>
    <string name="delete_all">전체 삭제</string>
    <string name="no_recent_searched_keyword">최근 검색하신 키워드가 없어요.</string>
    <string name="no_post_list_result">찾으시는 키워드로 등록된\n게시글이 아직 없어요.</string>
    <string name="create_post">게시글 작성</string>
    <string name="fix_post">게시글 수정</string>
    <string name="post_title_hint">글 제목</string>
    <string name="post_content_hint">다양한 MBTI를 가진 핍사이더와 함께 나누고 싶은 이야기를 작성해주세요!</string>
    <string name="mbti_want_to_share">공유하고 싶은 MBTI(선택사항)</string>
    <string name="mbti_tag">#%s</string>
    <string name="mbti_tag_plus">+%d</string>
    <string name="stop_post_dialog_title">작성 화면에서 나가시겠어요?</string>
    <string name="stop_post_dialog_description">작성 화면에서 벗어나면 작성된 내용은 저장되지 않습니다.</string>
    <string name="stop_post_dialog_yes">나가기</string>
    <string name="stop_post_dialog_no">계속 작성</string>
    <string name="complete_create_post">게시글 작성이 완료되었어요!</string>
    <string name="complete_fix_post">게시글 수정이 완료되었어요!</string>
    <string name="bad_word_dialog_title">작성할 수 없는 단어가 포함되어 있어요</string>
    <string name="bad_word_dialog_description">본문에 부적절한 단어가 포함되어 있어요.\n내용을 수정해주세요.</string>
    <string name="mbti_interpunct">%s·</string>
    <string name="comment_count">댓글 %d</string>
    <string name="please_write_comment">댓글을 남겨주세요</string>
    <string name="upload_comment">등록</string>
    <string name="no_comment">아직 댓글이 없어요!\n제일 먼저 댓글을 남겨주세요.</string>
    <string name="fix">수정하기</string>
    <string name="delete">삭제하기</string>
    <string name="delete_post_dialog_title">게시글을 정말 삭제하시겠어요?</string>
    <string name="delete_post_dialog_description">삭제하신 후에는\n다시 복원하실 수 없어요.</string>
    <string name="complete_delete_post">게시글이 삭제되었어요</string>
    <string name="delete_comment_dialog_title">댓글을 정말 삭제하시겠어요?</string>
    <string name="delete_comment_complete">댓글이 삭제되었어요</string>
    <string name="fix_comment">댓글 수정</string>
    <string name="fix_comment_complete">댓글 수정이 완료되었어요!</string>
</resources>