<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.beside153.peopleinside.viewmodel.mypage.DeleteAccountViewModel" />

        <variable
            name="app"
            type="com.beside153.peopleinside.App" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.mypage.DeleteAccountActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/deleteAccountAppBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/content1TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp">

                <ImageButton
                    android:id="@+id/backImageButton"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back_button"
                    android:onClick="@{() -> viewModel.onBackButtonClick()}"
                    android:src="@drawable/ic_left_arrow" />

                <TextView
                    style="@style/textStyleBoldBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@string/delete_space_account"
                    android:textSize="20sp" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/content1TextView"
            style="@style/textStyleBoldBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="52dp"
            android:text="@string/delete_account_content_1"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/content2TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteAccountAppBar" />

        <TextView
            android:id="@+id/content2TextView"
            style="@style/textStyleRegularGray700"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="52dp"
            android:text="@string/delete_account_content_2"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/content3TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content1TextView" />

        <TextView
            android:id="@+id/content3TextView"
            style="@style/textStyleRegularGray700"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="52dp"
            android:text="@{@string/delete_account_content_3(app.prefs.nickname)}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content2TextView"
            tools:text="@string/delete_account_content_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
