<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="340dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp">

        <TextView
            android:id="@+id/dialogTitleTextView"
            style="@style/textStyleBoldBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/will_you_cancel"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialogDescriptionTextView"
            style="@style/textStyleRegularGray700"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/will_you_cancel_content"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitleTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogDescriptionTextView">

            <TextView
                android:id="@+id/negativeButton"
                style="@style/textStyleBoldGray500"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_gray200_radius4dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/positiveButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/cancel" />

            <TextView
                android:id="@+id/positiveButton"
                style="@style/textStyleBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_black_radius4dp"
                android:gravity="center"
                android:minWidth="136dp"
                android:minHeight="48dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/negativeButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/confirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
