<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.beside153.peopleinside.viewmodel.contentdetail.CreateReviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.contentdetail.CreateReviewActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/createReviewAppBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp">

                <ImageButton
                    android:id="@+id/closeButton"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/close_button"
                    android:onClick="@{() -> viewModel.onBackButtonClick()}"
                    android:src="@drawable/ic_close" />

                <TextView
                    style="@style/textStyleBoldBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_review_2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/completeTextView"
                    style="@style/textStyleMediumGray500"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> viewModel.onCompleteButtonClick()}"
                    android:paddingHorizontal="16dp"
                    android:text="@string/complete"
                    android:textSize="16sp" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            style="@style/textStyleMediumBlack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/create_review_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="1500"
            android:paddingHorizontal="16dp"
            android:paddingVertical="14dp"
            android:text="@={viewModel.reviewText}"
            android:textColorHint="@color/gray_400"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createReviewAppBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
